<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/txtCorreo"
        android:hint="@string/hCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:singleLine="true"/>


    <EditText
        android:id="@+id/txtPassword"
        android:hint="@string/hPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btIniciar"
        android:text="@string/txtIniciar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btRegistrar"
        android:text="@string/txtRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>